conference add link

--- a/aboutus6.html
+++ b/aboutus6.html
@@ -141,7 +141,9 @@
                 </div>
 
                 <div class="news_continer">
-                    <div class="widget-pic"><img src="images/aboutvideo.jpg"></div>
+                    <div class="mod-organizer_title">正在申請中</div>
+
+                    <!-- <div class="widget-pic"><img src="images/aboutvideo.jpg"></div>
                     <div class="mod-organizer_title">ISO 20121證書</div>
                     <div class="download_word">
                         <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">防焰裝修需知</a></div>
@@ -180,7 +182,7 @@
                                 <div class="public_title">ISO 20121 活動永續性管理系統 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
 
                 </div>
