--- a/organizers_item6.html
+++ b/organizers_item6.html
@@ -163,10 +163,11 @@
                             <div class="step_title">「展場預約申請表」填寫後email外借組莫非小姐mo@taitra.org.tw (分機：2670)</div>
                         </div>
 
-
-
                     </div>
-                    <div class="mod-organizer_title ">請下載附件後詳閱並遵守</div>
+
+                    <div class="line_gray"></div>
+
+                    <div class="mod-organizer_title margin-top">請下載附件後詳閱並遵守</div>
                     <div class="download_word">
                         <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">裝潢作業規範</a></div>
                         <a href="#">
