--- a/advertisements_led.html
+++ b/advertisements_led.html
@@ -159,62 +159,61 @@
 
 
 
-        <footer id="id_footer">
-            <div class="footer_continer">
-                <div class="row_cop">
-                    <div class="copy">
-                        <div class="twt_one">
-                            <div class="twt_bx">
-                                <div class="twtpic">
-                                    <img src="images/one.jpg">
+            <footer id="id_footer">
+                <div class="footer_continer">
+                    <div class="row_cop">
+                        <div class="copy">
+                            <div class="twt_one">
+                                <div class="twt_bx_src">
+                                    <div class="twtpic">
+                                        <img src="images/one.jpg">
+                                    </div>
+                                </div>
+                                <div class="twt_bx">
+                                    <div class="con_title">南港展覽館1館</div>
+                                    <div class="con_list">電話｜886-2-2725-5200 </div>
+                                    <div class="con_list">分機｜服務台：#5111；租借場地：#5521 </div>
+                                    <div class="con_list">地址｜台北市 11568 南港區經貿二路 1 號 </div>
+                                    <div class="con_list">信箱｜niec@taitra.org.tw </div>
                                 </div>
                             </div>
-                            <div class="twt_bx">
-                                <div class="con_title">南港展覽館1館</div>
-                                <div class="con_list">電話｜886-2-2725-5200 </div>
-                                <div class="con_list">分機｜服務台：#5111；租借場地：#5521 </div>
-                                <div class="con_list">地址｜台北市 11568 南港區經貿二路 1 號 </div>
-                                <div class="con_list">信箱｜niec@taitra.org.tw </div>
-                            </div>
                         </div>
-                    </div>
-                    <div class="copy">
-                        <div class="twt_one">
-                            <div class="twt_bx">
-                                <div class="twtpic">
-                                    <img src="images/one2.jpg">
+                        <div class="copy">
+                            <div class="twt_one">
+                                <div class="twt_bx_src">
+                                    <div class="twtpic">
+                                        <img src="images/one2.jpg">
+                                    </div>
+                                </div>
+                                <div class="twt_bx">
+                                    <div class="con_title">南港展覽館2館</div>
+                                    <div class="con_list">電話｜886-2-2725-5200 </div>
+                                    <div class="con_list">分機｜服務台：#5111；租借場地：#5526 </div>
+                                    <div class="con_list">地址｜台北市 11568 南港區經貿二路 2 號 </div>
+                                    <div class="con_list">信箱｜niec2@taitra.org.tw </div>
                                 </div>
                             </div>
-                            <div class="twt_bx">
-                                <div class="con_title">南港展覽館2館</div>
-                                <div class="con_list">電話｜886-2-2725-5200 </div>
-                                <div class="con_list">分機｜服務台：#5111；租借場地：#5526 </div>
-                                <div class="con_list">地址｜台北市 11568 南港區經貿二路 2 號 </div>
-                                <div class="con_list">信箱｜niec2@taitra.org.tw </div>
+                        </div>
+                        <div class="copy appleft">
+                            <div class="twt_one">
+                                <div class="twt_bx">
+                                    <div class="con_title">會展好行 APP</div>
+                                    <div class="qrcode"><img src="images/qrcode_ios.jpg">Ios</div>
+                                    <div class="qrcode"> <img src="images/qrcode_android.jpg">Android</div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="copy">
-                        <div class="twt_one">
-                            <div class="twt_bx"></div>
-                            <div class="twt_bx">
-                                <div class="con_title">會展好行 APP</div>
-                                <div class="qrcode"><img src="images/qrcode_ios.jpg">Ios</div>
-                                <div class="qrcode"> <img src="images/qrcode_android.jpg">Android</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer_faq">
-            <ul>
-                <li><a href="faq1.html">常見問題</a></li>
-                <li>｜</li>
-                <li><a href="links.html">相關連結</a></li>
-            </ul>
-        </div>
-        <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
+                    <div class="footer_faq">
+                <ul>
+                    <li><a href="faq1.html">常見問題</a></li>
+                    <li>｜</li>
+                    <li><a href="links.html">相關連結</a></li>
+                </ul>
             </div>
-        </footer>
+            <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
+                </div>
+            </footer>
     </div>
 
 </body>
