--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 <div class="row_cop">
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one.jpg">
                                 </div>
@@ -476,7 +476,7 @@
                     </div>
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one2.jpg">
                                 </div>
@@ -490,9 +490,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copy">
+                    <div class="copy appleft">
                         <div class="twt_one">
-                            <div class="twt_bx"></div>
                             <div class="twt_bx">
                                 <div class="con_title">會展好行 APP</div>
                                 <div class="qrcode"><img src="images/qrcode_ios.jpg">Ios</div>
@@ -502,12 +501,12 @@
                     </div>
                 </div>
                 <div class="footer_faq">
-                    <ul>
-                        <li><a href="faq1.html">常見問題</a></li>
-                        <li>｜</li>
-                        <li><a href="links.html">相關連結</a></li>
-                    </ul>
-                </div>
+            <ul>
+                <li><a href="faq1.html">常見問題</a></li>
+                <li>｜</li>
+                <li><a href="links.html">相關連結</a></li>
+            </ul>
+        </div>
         <div class="copyright"> 台北南港展覽館2館 Copyright © 2018 Taipei Nangang Exhibition Center, Hall 2. All Rights Reserved. </div>
             </div>
         </footer>
