--- a/conference-room_item6.html
+++ b/conference-room_item6.html
@@ -364,7 +364,7 @@
                 <div class="row_cop">
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one.jpg">
                                 </div>
@@ -380,7 +380,7 @@
                     </div>
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one2.jpg">
                                 </div>
@@ -394,9 +394,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copy">
+                    <div class="copy appleft">
                         <div class="twt_one">
-                            <div class="twt_bx"></div>
                             <div class="twt_bx">
                                 <div class="con_title">會展好行 APP</div>
                                 <div class="qrcode"><img src="images/qrcode_ios.jpg">Ios</div>
