--- a/public_space3.html
+++ b/public_space3.html
@@ -180,7 +180,7 @@
                 <div class="row_cop">
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one.jpg">
                                 </div>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one2.jpg">
                                 </div>
@@ -210,9 +210,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copy">
+                    <div class="copy appleft">
                         <div class="twt_one">
-                            <div class="twt_bx"></div>
                             <div class="twt_bx">
                                 <div class="con_title">會展好行 APP</div>
                                 <div class="qrcode"><img src="images/qrcode_ios.jpg">Ios</div>
