--- a/visitors6.html
+++ b/visitors6.html
@@ -150,12 +150,12 @@
         </article>
 
 
-        <footer id="id_footer">
+        <<footer id="id_footer">
             <div class="footer_continer">
                 <div class="row_cop">
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one.jpg">
                                 </div>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="copy">
                         <div class="twt_one">
-                            <div class="twt_bx">
+                            <div class="twt_bx_src">
                                 <div class="twtpic">
                                     <img src="images/one2.jpg">
                                 </div>
@@ -185,9 +185,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copy">
+                    <div class="copy appleft">
                         <div class="twt_one">
-                            <div class="twt_bx"></div>
                             <div class="twt_bx">
                                 <div class="con_title">會展好行 APP</div>
                                 <div class="qrcode"><img src="images/qrcode_ios.jpg">Ios</div>
