--- a/advertisements_ad.html
+++ b/advertisements_ad.html
@@ -148,7 +148,7 @@
                             <li>「<a href="#">申請表</a>」、「<a href="#">切結書</a>」請填寫後回傳。</li>
                         </ol>
                         展覽、活動、會議之主辦單位請洽本中心專案窗口。
-                        如須長期租用廣告點位，請洽連絡電話: 886-2-2725-5200  分機:  5527
+                        如須長期租用廣告點位，請洽連絡電話: 886-2-2725-5200  分機: 5467 黃先生
                     </div>
                 </div>
 
