--- a/conference-room_item7.html
+++ b/conference-room_item7.html
@@ -245,7 +245,7 @@
                         </div>
                     </div>
 
-                <div class="safety_article margintop_title">南港展覽館展會服務組電話886-2-2725-5200 會議室茶點聯絡人： 林家豪 (分機5539)、曾冠瑜 (分機5533)</div>
+                <div class="safety_article margintop_title">有任何餐飲上的諮詢請洽 : 886-2725-5200#5458 章先生</div>
 
 
                     <div class="line_gray"></div>
