--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div class="bnmask"><img src="images/bn_mask.png"></div>
                     <div class=video-container>
                         <!-- <iframe src="https://www.youtube.com/embed/WTHr9uDGO18" frameborder="0" allowfullscreen></iframe> -->
-                        <img src="images/1.png">
+                        <img src="images/index_0723_01.jpg">
                     </div>
                 </div>
                 <div class="ento_bg">
