--- a/organizers_item2.html
+++ b/organizers_item2.html
@@ -143,49 +143,49 @@
 
                     </ul>
                 </div>
-                <div class="widget-pic"><img src="images/flow01.jpg"></div>
+                <!-- <div class="widget-pic"><img src="images/flow01.jpg"></div> -->
                 <div class="expo_table">
                     <table width="100%" border="0">
                       <tr>
                         <td bgcolor="#666666">項目</td>
                         <td bgcolor="#a4a4a4">一樓展場總計</td>
-                        <td bgcolor="#6da744">I區</td>
-                        <td bgcolor="#f2931e">J區</td>
-                        <td bgcolor="#739ad0">K區</td>
+                        <td bgcolor="#6da744">P區</td>
+                        <td bgcolor="#f2931e">Q區</td>
+
                       </tr>
                       <tr>
                         <td>面積 m2</td>
-                        <td>22,680</td>
-                        <td>7,750</td>
-                        <td>7,180</td>
-                        <td>7,750</td>
+                        <td>15,120</td>
+                        <td>7,560</td>
+                        <td>7,560</td>
+
                       </tr>
                       <tr>
                         <td>標準攤位數(3mx3m)</td>
-                        <td>1,161</td>
-                        <td>392</td>
-                        <td>377</td>
-                        <td>392</td>
+                        <td>887</td>
+                        <td>444</td>
+                        <td>443</td>
+
                       </tr>
                       <tr>
                         <td>載重量</td>
-                        <td colspan="4">5 公噸/m2</td>
+                        <td colspan="3">5000KG/ ㎡ </td>
                       </tr>
                       <tr>
                         <td>高度</td>
-                        <td colspan="4">9m</td>
+                        <td colspan="3">12m</td>
                       </tr>
                       <tr>
                         <td>貨車入口</td>
-                        <td colspan="4">3座</td>
+                        <td colspan="3">6座</td>
                       </tr>
                       <tr>
                         <td>貨梯數</td>
-                        <td colspan="4">3台</td>
+                        <td colspan="3">3台</td>
                       </tr>
                       <tr>
                         <td>柱距</td>
-                        <td colspan="4">18x18m</td>
+                        <td colspan="3">18m</td>
                       </tr>
                     </table>
                 </div>
