--- a/organizers_item5.html
+++ b/organizers_item5.html
@@ -147,7 +147,7 @@
 
                 <div class="news_continer">
                     <div class="mod-organizer_title">台北世貿中心南港展覽館交通及停車場資訊</div>
-                    <div class="widget-pic"><img src="images/traffic_01.jpg"></div>
+                    <!-- <div class="widget-pic"><img src="images/traffic_01.jpg"></div> -->
                 </div>
 
             </div>
