--- a/sitemap.html
+++ b/sitemap.html
@@ -199,7 +199,7 @@
                     <div class="site_box">
                         <div class="site_title">參觀資訊</div>
                         <ul>
-                            <li><a href="transportation1.html">交通資訊</a></li>
+                            <!-- <li><a href="transportation1.html">交通資訊</a></li> -->
                             <li><a href="visitors2.html">平面位置</a></li>
                             <li><a href="visitors3.html">公共設施</a></li>
                             <li><a href="food.html">餐飲服務</a></li>
