--- a/visitors2.html
+++ b/visitors2.html
@@ -129,7 +129,7 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <a href="transportation1.html"><li>交通資訊</li></a>
+                        <!-- <a href="transportation1.html"><li>交通資訊</li></a> -->
                         <a href="visitors2.html"><li class="active">平面位置</li></a>
                         <a href="visitors3.html"><li>公共設施</li></a>
                         <!-- <a href="visitors4.html"><li>Free Wi-Fi</li></a> -->
@@ -142,11 +142,11 @@
                 </div>
                 <div class="mod-organizer_title">平面位置</div>
                 <div class="safety_article">
-                    圖為台北南港展覽館1館一樓平面圖，顯示下列區域和展館的相對位置：
+                    圖為台北南港展覽館2館一樓平面圖，顯示下列區域和展館的相對位置：
                     計程車下客區、接駁巴士區、小客車下客區、公車等候區、機車入口、貨車入口、計程車等停區、小客車停車入口及南港捷運「南港展覽館站」之位置及週邊地理對應。
                     可對照經貿一路、經貿二路及南港路一段之地理空間分佈。
                     </br>
-                    同時可見台北南港展覽館1館之經貿廣場、中央廣場、西南廣場、東南側廣場及東北側廣場位置，供參觀訪客、民眾參考。
+                    同時可見台北南港展覽館2館之經貿廣場、中央廣場、西南廣場、東南側廣場及東北側廣場位置，供參觀訪客、民眾參考。
                 </div>
                 <div class="mod-organizer_title">圖為台北南港展覽館2館一樓平面圖，顯示下列區域和展館的相對位置：</div>
 
