--- a/visitors3.html
+++ b/visitors3.html
@@ -129,7 +129,7 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <a href="transportation1.html"><li>交通資訊</li></a>
+                        <!-- <a href="transportation1.html"><li>交通資訊</li></a> -->
                         <a href="visitors2.html"><li>平面位置</li></a>
                         <a href="visitors3.html"><li class="active">公共設施</li></a>
                         <!-- <a href="visitors4.html"><li>Free Wi-Fi</li></a> -->
@@ -140,7 +140,7 @@
                         <!-- <a href="visitors8.html"><li>免費行動數位閱讀</li></a> -->
                     </ul>
                 </div>
-                <div class="mod-organizer_title">世貿南港展覽館 1館 公共設施位置圖</div>
+                <div class="mod-organizer_title">世貿南港展覽館2館 公共設施位置圖</div>
                 <div class="editor">
                     <div class="ed_box"><img src="images/ed01.svg">洗手間</div>
                     <div class="ed_box"><img src="images/ed02.svg">手扶梯</div>
