--- a/visitors4.html
+++ b/visitors4.html
@@ -129,7 +129,7 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <a href="transportation1.html"><li>交通資訊</li></a>
+                        <!-- <a href="transportation1.html"><li>交通資訊</li></a> -->
                         <a href="visitors2.html"><li>平面位置</li></a>
                         <a href="visitors3.html"><li>公共設施</li></a>
                         <!-- <a href="visitors4.html"><li class="active">Free Wi-Fi</li></a> -->
