--- a/visitors6.html
+++ b/visitors6.html
@@ -129,7 +129,7 @@
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <a href="transportation1.html"><li>交通資訊</li></a>
+                        <!-- <a href="transportation1.html"><li>交通資訊</li></a> -->
                         <a href="visitors2.html"><li>平面位置</li></a>
                         <a href="visitors3.html"><li>公共設施</li></a>
                         <!-- <a href="visitors4.html"><li>Free Wi-Fi</li></a> -->
@@ -140,7 +140,7 @@
                         <!-- <a href="visitors8.html"><li>免費行動數位閱讀</li></a> -->
                     </ul>
                 </div>
-                <div class="mod-organizer_title">南港展覽館1館臨近捷運南港展覽館站，交通方便臨近各大高品質飯店。</div>
+                <div class="mod-organizer_title">南港展覽館2館臨近捷運南港展覽館站，交通方便臨近各大高品質飯店。</div>
                 <iframe allowfullscreen="" frameborder="0" height="450" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d14457.448688882338!2d121.608599!3d25.055711!3m2!1i1024!2i768!4f13.1!2m1!1z6aOv5bqX!5e0!3m2!1szh-TW!2stw!4v1456025408804" style="border:0" width="100%"></iframe>
 
 
