--- a/event_item1.html
+++ b/event_item1.html
@@ -133,11 +133,11 @@
                         <a href="event_item1.html"><li class="active">申請流程</li></a>
                         <a href="event_item2.html"><li>場租試算</li></a>
                         <a href="event_item3.html"><li>展場線上洽詢</li></a>
-                        <a href="#"><li>其他空間配套</li></a>
+                        <a href="#"><li>貴賓室</li></a>
                         <a href="event_item5.html"><li>吊點</li></a>
                         <a href="advertisements_ad.html"><li>臨時廣告物刊登</li></a>
                         <a href="event_item7.html"><li>活動剪影</li></a>
-                        <a href="#"><li>展場</li></a>
+
                     </ul>
                 </div>
 
