--- a/event_item5.html
+++ b/event_item5.html
@@ -133,22 +133,22 @@
                         <a href="event_item1.html"><li>申請流程</li></a>
                         <a href="event_item2.html"><li>場租試算</li></a>
                         <a href="event_item3.html"><li>展場線上洽詢</li></a>
-                        <a href="#"><li>其他空間配套</li></a>
+                        <a href="#"><li>貴賓室</li></a>
                         <a href="event_item5.html"><li class="active">吊點</li></a>
                         <a href="advertisements_ad.html"><li>臨時廣告物刊登</li></a>
                         <a href="event_item7.html"><li>活動剪影</li></a>
-                        <a href="#"><li>展場</li></a>
+
                     </ul>
                 </div>
 
                 <div class="news_continer">
                     <div class="mod-organizer_title ">吊點</div>
-                    <div class="download_word">
+                    <!-- <div class="download_word">
                         <div class="wod_box word_color"><i class="mdi mdi-file-pdf"></i><a href="#">外貿協會台北南港展覽館1館雲端展場桁架吊掛設備施工須知.pdf</a></div>
                         <a href="#">
                             <div class="down_boxright">下載</div>
                         </a>
-                    </div>
+                    </div> -->
 
 
                 </div>
