--- a/aboutus7.html
+++ b/aboutus7.html
@@ -141,28 +141,23 @@
                 </div>
 
                 <div class="news_continer">
-                <!-- <div class="mod-organizer_title">關於中華民國對外貿易發展協會</div> -->
-                <div class="public-art">
-                    <div class="art"><img src="images/201709170304031252.jpg"></div>
-                    <div class="art">
-                        <div class="mod-organizer_title">10大核心服務：</div>
-                        <div class="transport_point">
-                            <ul>
-                                <li>拓銷全球市場 </li>
-                                <li>推廣服務業貿易</li>
-                                <li>培訓國際企業人才</li>
-                                <li>推動國際經貿聯繫</li>
-                                <li>提升臺灣產業形象</li>
-                                <li>提供市場研析及商情</li>
-                                <li>加強數位及電商行銷</li>
-                                <li>運用大數據發掘商機</li>
-                                <li>辦理台灣國際專業展</li>
-                                <li>營運展覽館及會議中心</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <div class="widget-pic"><img src="images/201709170304031252.jpg"></div>
                 <div class="line_gray"></div>
+                <div class="mod-organizer_title">10大核心服務：</div>
+                <div class="transport_point">
+                    <ul>
+                        <li>拓銷全球市場 </li>
+                        <li>推廣服務業貿易</li>
+                        <li>培訓國際企業人才</li>
+                        <li>推動國際經貿聯繫</li>
+                        <li>提升臺灣產業形象</li>
+                        <li>提供市場研析及商情</li>
+                        <li>加強數位及電商行銷</li>
+                        <li>運用大數據發掘商機</li>
+                        <li>辦理台灣國際專業展</li>
+                        <li>營運展覽館及會議中心</li>
+                    </ul>
+                </div>
                 <div class="safety_article">
                     中華民國對外貿易發展協會（簡稱外貿協會或貿協）係由中華民國政府於民國59年7月1日結合民間 工商團體，所組成之非營利性財團法人，成立宗旨係協助業界發展我國之對外貿易。
 
