--- a/aboutus9.html
+++ b/aboutus9.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="contact_wrap">
                     <div class="content-area"><img src="images/video.jpg"></div>
-                    <div class="content-area">
+                    <div class="content-area content-right">
                         <div class="name"><input name="" type="text" placeholder="*姓名"/></div>
                         <div class="name"><input name="" type="text" placeholder="*公司"/></div>
                         <div class="name"><input name="" type="text" placeholder="電話"/></div>
