event item3 grid width

--- a/event_item3.html
+++ b/event_item3.html
@@ -137,11 +137,11 @@
                         <a href="event_item5.html"><li>吊點</li></a>
                         <a href="advertisements_ad.html"><li>臨時廣告物刊登</li></a>
                         <a href="event_item7.html"><li>活動剪影</li></a>
-                        
+
                     </ul>
                 </div>
                 <div class="event_wrap">
-                    <div class="content-area">
+                    <div class="content-area cont_online">
                         <div class="name_slk">*展場
                             <div class="kkekm">
                                 <table width="100%" border="0">
