--- a/index.html
+++ b/index.html
@@ -167,12 +167,18 @@
 
         <div class="index_sidelabel">
             <div class="side_fastbtn">
-                <a href="#"><div class="fast_icon"><img src="images/ke_04.svg"></div></a>
-                <div class="fast_font"><a href="hall2.html">南港1館</a></div>
-                <a href="#"><div class="fast_icon"><i class="mdi mdi-calendar"></i></div></a>
-                <div class="fast_font"><a href="calendar.html">展會活動</a></div>
-                <a href="#"><div class="fast_icon"><i class="mdi mdi-email"></i></div></a>
-                <div class="fast_font"><a href="aboutus9.html">聯絡我們</a></div>
+                <div class="fast_font">
+                    <div class="fast_icon"><img src="images/ke_04.svg"></div>
+                    <div class="fik_test"><a href="hall2.html">南港1館</a></div>
+                </div>
+                <div class="fast_font hide_fast">
+                    <div class="fast_icon"><i class="mdi mdi-calendar"></i></div>
+                    <div class="fik_test"><a href="calendar.html">展會活動</a></div>
+                </div>
+                <div class="fast_font hide_fast">
+                    <div class="fast_icon"><i class="mdi mdi-email"></i></div>
+                    <div class="fik_test"><a href="aboutus9.html">聯絡我們</a></div>
+                </div>
             </div>
         </div>
 
@@ -189,6 +195,14 @@
                     <div class="net_bg01"><img src="images/nav01.svg"></div>
                     <div class="net_bg02"><img src="images/nav02.svg"></div>
                     <div class="ento_wrapper">
+                        <!-- <div class="bebe_wrip">
+                            <div class="bebe"><a href="organizers.html"><img src="images/bebe.svg"></a></div>
+                            <div class="bebe"><a href="aboutus.html"><img src="images/bebe2.svg"></a></div>
+                            <div class="bebe"><a href="calendar.html"><img src="images/bebe3.svg"></a></div>
+                            <div class="bebe"><a href="visitors2.html"><img src="images/bebe4.svg"></a></div>
+                            <div class="bebe"><a href="#"><img src="images/bebe5.svg"></a></div>
+                            <div class="bebe"><a href="transportation1.html"><img src="images/bebe6.svg"></a></div>
+                        </div> -->
                         <div class="ento_item">
                             <div class="spotList skell_left sk_blue01">
                                 <a href="organizers.html">
@@ -311,10 +325,9 @@
 
                 <div class="traffic_wrapper">
                     <div class="traffic_bg">
-                        <div class="tra_imfor">
+                        <div class="mrt_box">
+                            <div class="traffic_big_title">交通資訊</div>
                             <div class="tra_contin">
-                                <div class="mrt_box">
-                                    <div class="traffic_big_title">交通資訊</div>
                                     <a href="transportation4.html">
                                         <div class="ubike_btn">
                                             <ul>
@@ -363,13 +376,11 @@
                                             </ul>
                                         </div>
                                     </a>
-                                </div>
-
-
-
                             </div>
-                            <div class="tra_blue"></div>
-                            <div class="tra_dryblue"></div>
+                        </div>
+                        <div class="tra_imfor">
+
+
                         </div>
                     </div>
                 </div>
