--- a/organizers_item5.html
+++ b/organizers_item5.html
@@ -139,7 +139,7 @@
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="event_item1.html"><li>活動申請</li></a>
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
-                        <a href="hall2.html"><li>南港一館</li></a>
+                        <a href="http://www.twtcnangang.com.tw/zh-tw/"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li class="active">交通及停車場</li></a>
 
                     </ul>
