--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                     <div class="fast_icon"><img src="images/ke_04.svg"></div>
                     <div class="fik_test"><a href="hall2.html">南港1館</a></div>
                 </div>
-                <div class="fast_font hide_fast">
+                <div class="fast_font">
                     <div class="fast_icon"><i class="mdi mdi-calendar"></i></div>
                     <div class="fik_test"><a href="calendar.html">展會活動</a></div>
                 </div>
-                <div class="fast_font hide_fast">
+                <div class="fast_font">
                     <div class="fast_icon"><i class="mdi mdi-email"></i></div>
                     <div class="fik_test"><a href="aboutus9.html">聯絡我們</a></div>
                 </div>
@@ -269,8 +269,9 @@
 
                         <div class="rentpace">
                             <div class="pace_box">
-                                <div class="pacd_tab">展場租借</div>
+
                                 <div class="pace_pic"><a href="organizers_item1.html"><img src="images/pace.jpg"></a></div>
+                                <div class="pacd_tab">展場租借</div>
                             </div>
                             <div class="pace_box">
                                 <div class="pacd_tab">會議室租借</div>
