organizers_item6.html

--- a/organizers_item6.html
+++ b/organizers_item6.html
@@ -204,7 +204,26 @@
                     </div>
                     <div class="mod-organizer_title margin-top">其他服務:</div>
                     <div class="telecom ">
-                        <div class="com"><img src="images/telecom.jpg"></div>
+                        <div class="chunghwa_table">
+                            <div class="chun_wraper">
+                                <div class="chun_logo"><img src="images/telecom.jpg"></div>
+                                <div class="chun_font">
+                                    <div class="com_title">中華電信股份有限公司(南港服務中心)</div>
+                                    <div class="com_font">服務電話： 886-2-2720-0149</br>
+                                    駐地施工班： 886-2-2655-9456 (展覽期間)</div>
+                                </div>
+                            </div>
+                            <div class="chun_wraper">
+                                <div class="chun_logo"><img src="images/telecom2.jpg"></div>
+                                <div class="chun_font">
+                                    <div class="com_title">新竹物流</div>
+                                    <div class="com_font">服務時間：展覽期間</br>
+                                    服務項目：貨運配送、宅配到府、物流倉儲</div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- <div class="com"><img src="images/telecom.jpg"></div>
                         <div class="com">
                             <div class="com_title">中華電信股份有限公司(南港服務中心)</div>
                             <div class="com_font">服務電話： 886-2-2720-0149</br>
@@ -215,7 +234,7 @@
                             <div class="com_title">新竹物流</div>
                             <div class="com_font">服務時間：展覽期間</br>
                             服務項目：貨運配送、宅配到府、物流倉儲</div>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
