--- a/organizers.html
+++ b/organizers.html
@@ -125,47 +125,55 @@
                 </div>
             </div>
             <div class="pace_bok">
-                <div class="bok-pic"><img src="images/biew.jpg"></div>
-                <div class="bok-pic bok_rp">
-                    <div class="bok_title">展覽會場</div>
-                    <div class="bok_font">國家級規格雙層展覽空間提供專業級的服務</div>
-                    <a href="organizers_item1.html">
-                    <div class="bok_btn">立即前往</div>
-                    </a>
+                <div class="bok-pic lili_pic01"></div>
+                <div class="bok-pic00 bok_rp">
+                    <div class="lili_box">
+                        <div class="bok_title">展覽會場</div>
+                        <div class="bok_font">國家級規格雙層展覽空間提供專業級的服務</div>
+                        <a href="organizers_item1.html">
+                        <div class="bok_btn">立即前往</div>
+                        </a>
+                    </div>
                 </div>
-            </div>
-
-            <div class="pace_bok2">
-                <div class="bok-pic bok_rp flix01">
-                    <div class="bok_title">會議室</div>
-                    <div class="bok_font">全台唯一多功能可調整式大型會議空間</div>
-                    <a href="conference-room.html">
-                    <div class="bok_btn">立即前往</div>
-                    </a>
-                </div>
-                <div class="bok-pic flix02"><img src="images/biew1.jpg"></div>
             </div>
 
             <div class="pace_bok">
-                <div class="bok-pic"><img src="images/biew2.jpg"></div>
-                <div class="bok-pic bok_rp">
-                    <div class="bok_title">公共空間</div>
-                    <div class="bok_font">空中走廊及星光長廊完美造景呈現</div>
-                    <a href="public_space.html">
-                    <div class="bok_btn">立即前往</div>
-                    </a>
+                <div class="bok-pic00 bok_rp flix01">
+                    <div class="lili_box">
+                        <div class="bok_title">會議室</div>
+                        <div class="bok_font">全台唯一多功能可調整式大型會議空間</div>
+                        <a href="conference-room.html">
+                        <div class="bok_btn">立即前往</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="bok-pic flix02 lili_pic02"></div>
+            </div>
+
+            <div class="pace_bok">
+                <div class="bok-pic lili_pic03"></div>
+                <div class="bok-pic00 bok_rp">
+                    <div class="lili_box">
+                        <div class="bok_title">公共空間</div>
+                        <div class="bok_font">空中走廊及星光長廊完美造景呈現</div>
+                        <a href="public_space.html">
+                        <div class="bok_btn">立即前往</div>
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="pace_bok2">
-                <div class="bok-pic bok_rp flix01">
-                    <div class="bok_title">廣告刊登</div>
-                    <div class="bok_font">有效宣傳活動的行銷手法及廣告曝光</div>
-                    <a href="advertisements_ad.html">
-                    <div class="bok_btn">立即前往</div>
-                    </a>
+            <div class="pace_bok">
+                <div class="bok-pic00 bok_rp flix01">
+                    <div class="lili_box">
+                        <div class="bok_title">廣告刊登</div>
+                        <div class="bok_font">有效宣傳活動的行銷手法及廣告曝光</div>
+                        <a href="advertisements_ad.html">
+                        <div class="bok_btn">立即前往</div>
+                        </a>
+                    </div>
                 </div>
-                <div class="bok-pic flix02"><img src="images/biew3.jpg"></div>
+                <div class="bok-pic flix02 lili_pic04"></div>
             </div>
             <div class="Vendor-resource_wrapper">
                 <div class="Vendor-resource_title">廠商資源</div>
