transportation motifly grid

--- a/transportation7.html
+++ b/transportation7.html
@@ -144,18 +144,25 @@
                 <div class="widget-pic"><img src="images/map3.jpg"></div>
                 <div class="mod-organizer_title">【1843】台北南港展覽館1館－桃園國際機場：</div>
                 <div class="trans_box">
-                    <div class="tran_list"><img src="images/ubike.png"></div>
-                    <div class="tran_list">
-                        <div class="transport_point">
-                            <ul>
-                                <li>旅程時間：約01時20分鐘。</li>
-                                <li>起站：南港展覽館</li>
-                                <li>迄站：桃園機場 </li>
-                                <li>電話：886-3-383-4004 </li>
-                            </ul>
 
-                        </div>
-                    </div>
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="20%"><img src="images/ubike.png"></td>
+                        <td width="80%">
+                            <div class="transport_point">
+                                <ul>
+                                    <li>旅程時間：約01時20分鐘。</li>
+                                    <li>起站：南港展覽館</li>
+                                    <li>迄站：桃園機場 </li>
+                                    <li>電話：886-3-383-4004 </li>
+                                </ul>
+
+                            </div>
+                        </td>
+                      </tr>
+                    </table>
+
+
                 </div>
 
             </div>
