--- a/transportation8.html
+++ b/transportation8.html
@@ -143,16 +143,19 @@
 
                 <div class="mod-organizer_title">歡迎使用尋車導引系統。（Android系統）</div>
                 <div class="trans_box">
-                    <div class="tran_list">
-                        <a href="#">
-                            <div class="push_btn">點此下載</div>
-                        </a>
-                    </div>
-                    <div class="tran_list">
-                        <div class="qrcode_tran"><img src="images/tran_qrcode.jpg"></div>
 
-
-                    </div>
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="20%"><img src="images/tran_qrcode.jpg"></td>
+                        <td width="80%">
+                            <div class="tran_list">
+                                <a href="#">
+                                    <div class="push_btn">點此下載</div>
+                                </a>
+                            </div>
+                        </td>
+                      </tr>
+                    </table>
                 </div>
 
 
