--- a/transportation3.html
+++ b/transportation3.html
@@ -144,16 +144,22 @@
             <div class="orang_wrapper">
             <div class="widget-pic"><img src="images/metrotaipeimap.jpg"></div>
                 <div class="trans_box">
-                    <div class="tran_list"><img src="images/bus3.svg"></div>
-                    <div class="tran_list">
-                        <div class="transport_point">
-                            <ul>
-                                <li>1.前往台北南港展覽館2館，可搭乘捷運「文湖線」於「南港展覽館站」下車。</li>
-                                <li>2.前往台北南港展覽館2館，也可搭捷運「板南線」於「南港展覽館站」下車。</li>
-                            </ul>
-                        </div>
-                        <div class="point_sem">* 捷運路線參考圖，資料來源： 台北大眾捷運公司</div>
-                    </div>
+
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="20%"><img src="images/bus3.svg"></td>
+                        <td width="80%">
+                            <div class="transport_point">
+                                <ul>
+                                    <li>1.前往台北南港展覽館2館，可搭乘捷運「文湖線」於「南港展覽館站」下車。</li>
+                                    <li>2.前往台北南港展覽館2館，也可搭捷運「板南線」於「南港展覽館站」下車。</li>
+                                </ul>
+                            </div>
+                            <div class="point_sem">* 捷運路線參考圖，資料來源： 台北大眾捷運公司</div>
+                        </td>
+                      </tr>
+                    </table>
+
                 </div>
 
 
