--- a/transportation4.html
+++ b/transportation4.html
@@ -148,57 +148,70 @@
                 </div>
                 <div class="mod-organizer_title">台北南港展覽館2館週邊站牌：</div>
                 <div class="trans_box">
-                    <div class="tran_list"><img src="images/busicon.svg"></div>
-                    <div class="tran_list">
-                        <div class="transport_point">
-                            <ul>
-                                <li>南港國小：</li>
-                            </ul>
-                            <div class="point_sem">212、276、306(三重)、306(大都會)、306、605、620、629、645、645、668、675、小1、小12、小12、小5、藍15、藍22、藍23、205
-                            </div>
-                            <ul>
-                                <li>經貿一路口：</li>
-                            </ul>
-                            <div class="point_sem">605、629、668、675、南21、51</div>
-                            <ul>
-                                <li>南港軟體園區北站：</li>
-                            </ul>
-                            <div class="point_sem">203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍22、棕9、棕10 </div>
 
-                            <ul>
-                                <li>南港軟體園區南站：</li>
-                            </ul>
-                            <div class="point_sem">51、203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍21、藍22</div>
-                        </div>
-                    </div>
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="20%"><img src="images/busicon.svg"></td>
+                        <td width="80%">
+                            <div class="transport_point">
+                                <ul>
+                                    <li>南港國小：</li>
+                                </ul>
+                                <div class="point_sem">212、276、306(三重)、306(大都會)、306、605、620、629、645、645、668、675、小1、小12、小12、小5、藍15、藍22、藍23、205
+                                </div>
+                                <ul>
+                                    <li>經貿一路口：</li>
+                                </ul>
+                                <div class="point_sem">605、629、668、675、南21、51</div>
+                                <ul>
+                                    <li>南港軟體園區北站：</li>
+                                </ul>
+                                <div class="point_sem">203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍22、棕9、棕10 </div>
+
+                                <ul>
+                                    <li>南港軟體園區南站：</li>
+                                </ul>
+                                <div class="point_sem">51、203、281、620、620、629、645、551、711、817、小1、紅32、藍12、藍21、藍22</div>
+                            </div>
+                        </td>
+                      </tr>
+                    </table>
+
                 </div>
                 <div class="line_gray"></div>
 
                 <div class="mod-organizer_title">台北南港展覽館2館週邊站牌位置：</div>
                 <div class="trans_box">
-                    <div class="tran_list"><img src="images/busicon.svg"></div>
-                    <div class="tran_list">
-                        <div class="transport_point">
-                            <ul>
-                                <li>南港國小：</li>
-                            </ul>
-                            <div class="point_sem">北市南港路 1 段 77 號（向西）；北市南港路 TS12C83 電桿旁（向東）
-                            </div>
-                            <ul>
-                                <li>經貿一路口：</li>
-                            </ul>
-                            <div class="point_sem">北市南港路 1 段上距經貿路口 10M 西側（向西）</div>
-                            <ul>
-                                <li>南港軟體園區北站：</li>
-                            </ul>
-                            <div class="point_sem">北市三重路 39 號候車亭旁（向南）；北市三重路 39 號對面(向北)</div>
 
-                            <ul>
-                                <li>南港軟體園區南站：</li>
-                            </ul>
-                            <div class="point_sem">北市三重路 19 之 2 號前（向南）；北市三重路 19-2 號對面(向北)</div>
-                        </div>
-                    </div>
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="20%"><img src="images/busicon.svg"></td>
+                        <td width="80%">
+                            <div class="transport_point">
+                                <ul>
+                                    <li>南港國小：</li>
+                                </ul>
+                                <div class="point_sem">北市南港路 1 段 77 號（向西）；北市南港路 TS12C83 電桿旁（向東）
+                                </div>
+                                <ul>
+                                    <li>經貿一路口：</li>
+                                </ul>
+                                <div class="point_sem">北市南港路 1 段上距經貿路口 10M 西側（向西）</div>
+                                <ul>
+                                    <li>南港軟體園區北站：</li>
+                                </ul>
+                                <div class="point_sem">北市三重路 39 號候車亭旁（向南）；北市三重路 39 號對面(向北)</div>
+
+                                <ul>
+                                    <li>南港軟體園區南站：</li>
+                                </ul>
+                                <div class="point_sem">北市三重路 19 之 2 號前（向南）；北市三重路 19-2 號對面(向北)</div>
+                            </div>
+                        </td>
+                      </tr>
+                    </table>
+
+
                 </div>
 
 
