--- a/transportation6.html
+++ b/transportation6.html
@@ -146,17 +146,24 @@
             <div class="orang_wrapper">
                 <div class="mod-organizer_title">1.台北南港展覽館1館附近共有3處Ubike租賃站，地點如下：</div>
                 <div class="trans_box">
-                    <div class="tran_list"><img src="images/ubike.png"></div>
-                    <div class="tran_list">
-                        <div class="transport_point">
-                            <ul>
-                                <li>捷運南港展覽館站（5號出口）：研究院路／市民大道（東北側）</li>
-                                <li>捷運南港軟體園區站（2號出口）：捷運南港軟體園區站2號出口外</li>
-                                <li>南港國小：惠民街／興東街（南側停車場）</li>
-                            </ul>
 
-                        </div>
-                    </div>
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="20%"><img src="images/ubike.png"></td>
+                        <td width="80%">
+                            <div class="transport_point">
+                                <ul>
+                                    <li>捷運南港展覽館站（5號出口）：研究院路／市民大道（東北側）</li>
+                                    <li>捷運南港軟體園區站（2號出口）：捷運南港軟體園區站2號出口外</li>
+                                    <li>南港國小：惠民街／興東街（南側停車場）</li>
+                                </ul>
+
+                            </div>
+                        </td>
+                      </tr>
+                    </table>
+
+
                 </div>
                 <div class="line_gray"></div>
 
