--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="side_fastbtn">
                 <div class="fast_font">
                     <div class="fast_icon"><img src="images/ke_04.svg"></div>
-                    <div class="fik_test"><a href="hall2.html">南港1館</a></div>
+                    <div class="fik_test"><a href="http://www.twtcnangang.com.tw/zh-tw/">南港1館</a></div>
                 </div>
                 <div class="fast_font">
                     <div class="fast_icon"><i class="mdi mdi-calendar"></i></div>
